# libsodium-bindings

./: .git-blame-ignore-revs  .gitignore  .hlint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  Setup.hs  cabal.homebrew.project  cabal.pkg-config.project  cabal.project  cryptography-libsodium-bindings.cabal  cryptography-libsodium.cabal  default.nix  flake.nix  hie.yaml  libsodium-bindings.cabal
.githooks/: pre-commit
.github/: check.sh  mergify.yml
.github/workflows/: ci.yaml  ci.yml  ghc-nightly.yaml  install-libsodium.sh  libsodium-bindings.yml  linting.yml  nix-check.yml  sel.yml
cbits/libsodium-stable/builds/msvc/vs2013/libsodium/: libsodium.vcxproj
libsodium-bindings/: CHANGELOG.md  CONTRIBUTING.md  README.md  Setup.hs  libsodium-bindings.cabal
libsodium-bindings/cbits/libsodium-stable/: .gitignore  Makefile  config.status  libtool
libsodium-bindings/cbits/libsodium-stable/builds/: Makefile
libsodium-bindings/cbits/libsodium-stable/contrib/: Makefile
libsodium-bindings/cbits/libsodium-stable/dist-build/: Makefile
libsodium-bindings/cbits/libsodium-stable/msvc-scripts/: Makefile
libsodium-bindings/cbits/libsodium-stable/src/: Makefile
libsodium-bindings/cbits/libsodium-stable/src/libsodium/: Makefile
libsodium-bindings/cbits/libsodium-stable/src/libsodium/include/: Makefile
libsodium-bindings/cbits/libsodium-stable/test/: Makefile
libsodium-bindings/cbits/libsodium-stable/test/default/: Makefile
libsodium-bindings/src/LibSodium/: Bindings.hs
libsodium-bindings/src/LibSodium/Bindings/: AEAD.hs  Comparison.hs  CryptoAuth.hs  CryptoBox.hs  CryptoSign.hs  GenericHashing.hs  KeyDerivation.hs  KeyExchange.hs  Main.hs  PasswordHashing.hs  Random.hs  SHA2.hs  Scrypt.hs  SealedBoxes.hs  SecretStream.hs  Secretbox.hs  SecureMemory.hs  ShortHash.hs  ShortHashing.hs  Signing.hs  Utils.hs  XChaCha20.hs
nix/: sources.json
sel/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  sel.cabal
sel/src/: Sel.hs
sel/src/Sel/: HMAC.hs  Hashing.hs  Internal.hs  Key.hs  KeyMaterialDecodeError.hs  Scrypt.hs  Signing.hs
sel/src/Sel/ByteString/: Codec.hs
sel/src/Sel/ByteString/Codec/: KeyMaterialDecodeError.hs  KeyPointer.hs
sel/src/Sel/HMAC/: SHA256.hs  SHA512.hs  SHA512_256.hs
sel/src/Sel/Hashing/: Generic.hs  Password.hs  SHA2.hs  SHA256.hs  SHA512.hs  Short.hs
sel/src/Sel/Hashing/SHA2/: Internal.hs  SHA256.hs  SHA512.hs
sel/src/Sel/Internal/: Constraints.hs  FFI.hs  Instances.hs  Scoped.hs  Sodium.hs
sel/src/Sel/Internal/Scoped/: FFI.hs  Foreign.hs
sel/src/Sel/PublicKey/: AuthenticatedEncryption.hs  Cipher.hs  Seal.hs  Signature.hs
sel/src/Sel/PublicKey/Internal/: Signature.hs
sel/src/Sel/SecretKey/: AuthenticatedEncryption.hs  Authentication.hs  Cipher.hs  EncryptedStream.hs  Stream.hs
sel/test/: Main.hs  TestUtils.hs  package-api-9.10.1.txt  package-api-9.6.6.txt  package-api-9.8.2.txt
sel/test/Test/: HMAC.hs  Hashing.hs  Scrypt.hs  Signing.hs
sel/test/Test/Hashing/: Generic.hs  Password.hs  SHA2.hs  Short.hs
sel/test/Test/PublicKey/: AuthenticatedEncryption.hs  Cipher.hs  Seal.hs  Signature.hs
sel/test/Test/SecretKey/: AuthenticatedEncryption.hs  Authentication.hs  Cipher.hs  EncryptedStream.hs  Stream.hs
src/Cryptography/: LibSodium.hs  Sodium.hs
src/Cryptography/LibSodium/: FFI.chs  Hash.hs  Orphans.hs
src/Cryptography/LibSodium/Hash/: Blake2b.chs  Types.chs
src/Cryptography/Sodium/: Comparison.hs  Main.hs  XChaCha20.hs
src/Cryptography/Sodium/Bindings/: Comparison.hs  GenericHashing.hs  Hashing.hs  KeyExchange.hs  Main.hs  PasswordHashing.hs  Random.hs  SHA2.hs  SHA512.hs  Scrypt.hs  Secretbox.hs  SecureMemory.hs  Signing.hs  XChaCha20.hs
src/Cryptography/Sodium/Helpers/: Direct.hs
src/Cryptography/Sodium/XChaCha20/: Direct.hs
src/LibSodium/Bindings/: GenericHashing.hs  KeyExchange.hs  Main.hs  PasswordHashing.hs  Random.hs  Scrypt.hs  Secretbox.hs  SecureMemory.hs  Utils.hs  XChaCha20.hs
test/: HashingTests.hs  Main.hs
test/Test/: GenericHashing.hs
winlibs/: libsodium.lib
