cabal-version:      3.0
name:               cryptography-libsodium-bindings
version:            0.0.1.0
category:           Cryptography
synopsis:           Static FFI bindings to libsodium
description:
  This library embeds FFI bindings to the stable version of libsodium 1.0.18.
  The interface exposed by this library is kept close to the C library.

homepage:
  https://github.com/haskell-cryptography/cryptography-libsodium-bindings

bug-reports:
  https://github.com/haskell-cryptography/cryptography-libsodium-bindings/issues

author:             Hécate Moonlight, Koz Ross
maintainer:         The Haskell Cryptography contributors
license:            BSD-3-Clause
build-type:         Custom
tested-with:        GHC ==8.10.7 || ==9.0.1 || ==9.2.1
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location:
    https://github.com/haskell-cryptography/cryptography-libsodium-bindings

common common
  build-depends:    base >=4.14 && <5
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -haddock

  include-dirs:     ./cbits/libsodium-stable/src/libsodium/include/
  includes:
    sodium/crypto_generichash_blake2b.h
    sodium/crypto_hash_sha256.h
    sodium/crypto_hash_sha512.h
    sodium.h

  default-language: Haskell2010

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

custom-setup
  setup-depends:
    , base       >=3   && <5
    , Cabal      >=2.0
    , directory
    , filepath
    , process

library
  import:                  common
  include-dirs:            include
  extra-bundled-libraries: sodium
  exposed-modules:
    Cryptography.Sodium.Bindings.Comparison
    Cryptography.Sodium.Bindings.GenericHashing
    Cryptography.Sodium.Bindings.KeyExchange
    Cryptography.Sodium.Bindings.Main
    Cryptography.Sodium.Bindings.PasswordHashing
    Cryptography.Sodium.Bindings.Random
    Cryptography.Sodium.Bindings.Scrypt
    Cryptography.Sodium.Bindings.Secretbox
    Cryptography.Sodium.Bindings.SecureMemory
    Cryptography.Sodium.Bindings.SHA2
    Cryptography.Sodium.Bindings.Signing
    Cryptography.Sodium.Bindings.XChaCha20

  hs-source-dirs:          src
