cabal-version:      3.0
name:               cryptography-libsodium
version:            1.0
category:           Cryptography
synopsis:           FFI bindings to libsodium
description:
  !TODO! Describe that it embeds the library instead of relying on system libraries

homepage:
  https://github.com/haskell-cryptography/cryptography-libsodium#readme

bug-reports:
  https://github.com/haskell-cryptography/cryptography-libsodium/issues

author:             Hécate Moonlight, Koz Ross
maintainer:         Hécate Moonlight, Koz Ross
license:            BSD-3-Clause
build-type:         Custom
tested-with:        GHC ==8.10.7 || ==9.0.1 || ==9.2.1
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location:
    https://github.com/haskell-cryptography/cryptography-libsodium

common common
  build-depends:    base >=4.14 && <5
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-export-lists -fhide-source-paths -Wno-unused-do-bind
    -fwrite-ide-info -hiedir=.hie -haddock

  default-language: Haskell2010

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

custom-setup
  setup-depends:
    , base       >=3   && <5
    , Cabal      >=2.0
    , directory
    , filepath
    , process

library
  import:                  common
  include-dirs:            include
  extra-bundled-libraries: sodium
  exposed-modules:
    Cryptography.Sodium.Comparison
    Cryptography.Sodium.Main
    Cryptography.Sodium.XChaCha20

  hs-source-dirs:          src
