cabal-version:      3.0
name:               libsodium-bindings
version:            0.0.1.0
category:           Cryptography
synopsis:           FFI bindings to libsodium
description:
  This library embeds FFI bindings to the stable version of libsodium 1.0.18.
  The interface exposed by this library is kept close to the C library.

homepage:           https://github.com/haskell-cryptography/libsodium-bindings
bug-reports:
  https://github.com/haskell-cryptography/libsodium-bindings/issues

author:             Hécate Moonlight, Koz Ross
maintainer:         The Haskell Cryptography contributors
license:            BSD-3-Clause
build-type:         Custom
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.7 || ==9.6.2

extra-source-files:
  LICENSE
  README.md

extra-doc-files:    CHANGELOG.md

flag use-pkg-config
  description: Use pkg-config to find Libsodium (macOS and linux only).
  default:     False
  manual:      True

flag homebrew-libsodium
  description: Use Homebrew version of Libsodium (macOS only).
  default:     False
  manual:      True

flag bundled-libsodium
  description:
    Use the version of libsodium-1.0.18-stable bundled with the library

  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/haskell-cryptography/libsodium-bindings

common common
  build-depends:    base >=4.14 && <5
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -haddock

  if (os(osx) && flag(homebrew-libsodium))
    include-dirs:   /opt/local/include
    extra-lib-dirs: /user/local/opt/libsodium/lib

  elif flag(use-pkg-config)
    pkgconfig-depends: libsodium ==1.0.18

  elif flag(bundled-libsodium)
    extra-bundled-libraries: Csodium
    include-dirs: include
    install-includes: 
      include/sodium.h
      include/sodium/core.h
      include/sodium/crypto_aead_aes256gcm.h
      include/sodium/crypto_aead_chacha20poly1305.h
      include/sodium/crypto_aead_xchacha20poly1305.h
      include/sodium/crypto_auth.h
      include/sodium/crypto_auth_hmacsha256.h
      include/sodium/crypto_auth_hmacsha512256.h
      include/sodium/crypto_auth_hmacsha512.h
      include/sodium/crypto_box_curve25519xchacha20poly1305.h
      include/sodium/crypto_box_curve25519xsalsa20poly1305.h
      include/sodium/crypto_box.h
      include/sodium/crypto_core_ed25519.h
      include/sodium/crypto_core_hchacha20.h
      include/sodium/crypto_core_hsalsa20.h
      include/sodium/crypto_core_ristretto255.h
      include/sodium/crypto_core_salsa2012.h
      include/sodium/crypto_core_salsa208.h
      include/sodium/crypto_core_salsa20.h
      include/sodium/crypto_generichash_blake2b.h
      include/sodium/crypto_generichash.h
      include/sodium/crypto_hash.h
      include/sodium/crypto_hash_sha256.h
      include/sodium/crypto_hash_sha512.h
      include/sodium/crypto_kdf_blake2b.h
      include/sodium/crypto_kdf.h
      include/sodium/crypto_kx.h
      include/sodium/crypto_onetimeauth.h
      include/sodium/crypto_onetimeauth_poly1305.h
      include/sodium/crypto_pwhash_argon2id.h
      include/sodium/crypto_pwhash_argon2i.h
      include/sodium/crypto_pwhash.h
      include/sodium/crypto_pwhash_scryptsalsa208sha256.h
      include/sodium/crypto_scalarmult_curve25519.h
      include/sodium/crypto_scalarmult_ed25519.h
      include/sodium/crypto_scalarmult.h
      include/sodium/crypto_scalarmult_ristretto255.h
      include/sodium/crypto_secretbox.h
      include/sodium/crypto_secretbox_xchacha20poly1305.h
      include/sodium/crypto_secretbox_xsalsa20poly1305.h
      include/sodium/crypto_secretstream_xchacha20poly1305.h
      include/sodium/crypto_shorthash.h
      include/sodium/crypto_shorthash_siphash24.h
      include/sodium/crypto_sign_ed25519.h
      include/sodium/crypto_sign_edwards25519sha512batch.h
      include/sodium/crypto_sign.h
      include/sodium/crypto_stream_chacha20.h
      include/sodium/crypto_stream.h
      include/sodium/crypto_stream_salsa2012.h
      include/sodium/crypto_stream_salsa208.h
      include/sodium/crypto_stream_salsa20.h
      include/sodium/crypto_stream_xchacha20.h
      include/sodium/crypto_stream_xsalsa20.h
      include/sodium/crypto_verify_16.h
      include/sodium/crypto_verify_32.h
      include/sodium/crypto_verify_64.h
      include/sodium/export.h
      include/sodium/randombytes.h
      include/sodium/randombytes_internal_random.h
      include/sodium/randombytes_sysrandom.h
      include/sodium/runtime.h
      include/sodium/utils.h
      include/sodium/version.h

  else
    extra-libraries: sodium

  default-language: Haskell2010

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

custom-setup
  setup-depends:
    , base       >=3    && <5
    , Cabal      >=3.10
    , directory
    , filepath
    , process

library
  import:          common
  hs-source-dirs:  src

  -- cabal-fmt: expand src/
  exposed-modules:
    LibSodium.Bindings
    LibSodium.Bindings.AEAD
    LibSodium.Bindings.Comparison
    LibSodium.Bindings.CryptoAuth
    LibSodium.Bindings.CryptoBox
    LibSodium.Bindings.CryptoSign
    LibSodium.Bindings.GenericHashing
    LibSodium.Bindings.KeyDerivation
    LibSodium.Bindings.KeyExchange
    LibSodium.Bindings.Main
    LibSodium.Bindings.PasswordHashing
    LibSodium.Bindings.Random
    LibSodium.Bindings.Scrypt
    LibSodium.Bindings.SealedBoxes
    LibSodium.Bindings.Secretbox
    LibSodium.Bindings.SecretStream
    LibSodium.Bindings.SecureMemory
    LibSodium.Bindings.SHA2
    LibSodium.Bindings.ShortHashing
    LibSodium.Bindings.Utils
    LibSodium.Bindings.XChaCha20
